--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog1.webp" alt="Smarter Tools, Dumber Mistakes">
           <div class="blog-overlay">
-            <h3>Smarter Tools, Dumber Mistakes</h3>
+            <h3>"Smarter Tools" and "Dumber Mistakes"</h3>
             <h4>(AI Tools & Dev Productivity)</h4>
           </div>
         </div>
@@ -152,7 +152,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog2.webp" alt="From Workflows to Smart Minds">
           <div class="blog-overlay">
-            <h3>From Automated Workflows to Smart Minds</h3>
+            <h3>From "Automated Workflows" to "Smart Minds"</h3>
             <h4>(Generative AI & Agentic Systems)</h4>
           </div>
         </div>
@@ -164,7 +164,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
-            <h3>Why Even Greatest AI Systems can Fail</h3>
+            <h3>Why Even Greatest AI Systems Can Fail!</h3>
             <h4>(LLMs & Context Engineering)</h4>
           </div>
         </div>
@@ -176,7 +176,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog4.webp" alt="AI Agents are Full Stack">
           <div class="blog-overlay">
-            <h3>Why AI Agents Are a Full-Stack Problem</h3>
+            <h3>Why AI Agents Are a "Full-Stack Problem"!</h3>
              <h4>(System Thinking & AI Agents)</h4>
           </div>
         </div>
@@ -188,7 +188,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog5.webp" alt="Engineering Teams Build IDPs">
           <div class="blog-overlay">
-            <h3>Every Engineering Team Builds an IDP</h3>
+            <h3>Every Engg Team Builds an IDP at Some Point</h3>
             <h4>(Platform Engg. & Dev Efficiency)</h4>
           </div>
         </div>
@@ -200,7 +200,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog6.png" alt="MCP and AI Products">
           <div class="blog-overlay">
-            <h3>AI Models are as Good as their Access to Data</h3>
+            <h3>AI Models are AS Good AS their Access to Data!</h3>
             <h4>(AI Engineering & MCP Servers)</h4>
           </div>
         </div>
@@ -212,8 +212,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog7.webp" alt="Agile Was Never the Problem">
           <div class="blog-overlay">
-            <h3>AI is revealing our Broken Agile Habits</h3>
-            <h4>(Agile & Future of Work)</h4>
+            <h3>What AI is revealing our Broken Agile Habits!</h3>
+            <h4>(AI, Agile & Future of Work)</h4>
           </div>
         </div>
       </a>
@@ -224,7 +224,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog8.webp" alt="Death of Static Docs">
           <div class="blog-overlay">
-            <h3>The Death of Static Dev Documentation</h3>
+            <h3>The Death of Static Tech Documentation</h3>
             <h4>(Dev Experience & Tech Writing)</h4>
           </div>
         </div>
@@ -236,7 +236,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog9.webp" alt="Sustainable & Responsible AI">
           <div class="blog-overlay">
-            <h3>"AI Governance" for Agentic Systems</h3>
+            <h3>Designing "AI Governance" for Agentic Systems</h3>
             <h4>(Sustainable & Responsible AI)</h4>
           </div>
         </div>
