--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog1.webp" alt="Smarter Tools, Dumber Mistakes">
           <div class="blog-overlay">
-            <h3>"Smarter Tools" and "Dumber Mistakes"</h3>
+            <h3>Smarter Tools, Dumber Mistakes</h3>
             <h4>(AI Tools & Dev Productivity)</h4>
           </div>
         </div>
@@ -164,7 +164,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
-            <h3>Why Even Greatest AI Systems Can Fail!</h3>
+            <h3>Why Even Greatest AI Systems Can Fail</h3>
             <h4>(LLMs & Context Engineering)</h4>
           </div>
         </div>
@@ -176,7 +176,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog4.webp" alt="AI Agents are Full Stack">
           <div class="blog-overlay">
-            <h3>Why AI Agents Are a "Full-Stack Problem"!</h3>
+            <h3>Why AI Agents Are a "Full-Stack Problem"</h3>
              <h4>(System Thinking & AI Agents)</h4>
           </div>
         </div>
@@ -200,7 +200,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog6.png" alt="MCP and AI Products">
           <div class="blog-overlay">
-            <h3>AI Models are AS Good AS their Access to Data!</h3>
+            <h3>AI Models are AS Good AS their Access to Data</h3>
             <h4>(AI Engineering & MCP Servers)</h4>
           </div>
         </div>
@@ -212,7 +212,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog7.webp" alt="Agile Was Never the Problem">
           <div class="blog-overlay">
-            <h3>What AI is revealing our Broken Agile Habits!</h3>
+            <h3>What AI is revealing our Broken Agile Habits</h3>
             <h4>(AI, Agile & Future of Work)</h4>
           </div>
         </div>
