--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of managing Technology Products and leading Complex Technical Programs. And lately, my work has revolved around building Developer-Focused Products <a style="font-style: italic;">(developer experience, infrastructure, platform capabilities)</a> and data platforms <a style="font-style: italic;">(data science, engineering, analytics)</a>.
+        My career so far has been a blend of leading Technology Products and their Content Strategy & Knowledge Programs. And lately, my work has revolved more around Developer-Focused Products <a style="font-style: italic;">(dev experience, infra, platform capabilities)</a> and data platforms <a style="font-style: italic;">(data science, engineering, analytics)</a>.
         <br><br>
         Along the way, I’ve collaborated closely with DevOps, System Architects, and Platform/Data Engineering teams, contributing significantly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>. In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
         <br><br>
