--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </p>
       
       <h3 style="font-size: 19px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.4;">
-        “Finding a way through Technical Chaos and Translating Complex Concepts into content that drives 
+        “Leading Strategically Technical Chaos and Translating Complex Concepts into content that drives 
         Clarity, Consistency, & Self-serve Success. Further, Orchestrating Knowledge Workflows to keep Teams Aligned."
         
       </h3>
