--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I come with a decades' experience of Innovating, Building and Communicating at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(delivering ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
+        I come with a decades' experience of Innovating, Building and Communicating at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(turning unstructured technical territory into shared product strategy, aligning teams around ambitious roadmaps, and helping scale-ups move fast with confidence)</a>.
         <br><br>
         WHAT DRIVES ME?       
       </p>
@@ -113,9 +113,10 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         My career so far has been a blend of leading Technology Products and their Content Strategy & Knowledge Programs. And lately, my work has revolved around more Technical Platforms <a style="font-style: italic;">(improving developer experiences, infrastructure & system capabilities)</a> and data platforms <a style="font-style: italic;">(data science, engineering, analytics)</a>.
         <br><br>
-        Along the way, I’ve collaborated closely with various SMEs (from senior stakeholders to system architects, platform/data Enggs., and PMs), contributing significantly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>. In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
+        Along the way, I’ve collaborated closely with various SMEs (from senior stakeholders to platform/data Engg. teams, and PMs), and contributed to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
+        In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
+        And with time, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
         <br><br>
         MY PHILOSOPHY:
       </p>
