--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I come with a decades' experience of Innovating, Building and Communicating at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(turning unstructured technical territory into shared product strategy, aligning teams around ambitious roadmaps, and helping scale-ups move fast with confidence)</a>.
+        I come with a decades' experience of Innovating, Building and Communicating at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(turning unstructured technical territories into shared product strategy, aligning teams around ambitious roadmaps, and helping scale-ups move fast with confidence)</a>.
         <br><br>
         WHAT DRIVES ME?       
       </p>
@@ -111,7 +111,7 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of leading Technology Products and their Content Strategy & Knowledge Programs. And lately, my work has revolved around more Technical Platforms <a style="font-style: italic;">(improving dev exp, infrastructure & system capabilities)</a> and data platforms <a style="font-style: italic;">(data science & analytics)</a>.
+        My career so far has been a blend of leading Technology Products and their Content Strategy & Knowledge Management Programs. And lately, my work has revolved around more Technical Platforms <a style="font-style: italic;">(improving developer experiences, infrastructure & system capabilities)</a> and data platforms <a style="font-style: italic;">(data science & analytics)</a>.
         Along the way, I’ve collaborated closely with various SMEs (from senior stakeholders to fellow PMs, platform/data engg. and customer success teams), and contributed directly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>.
         <br><br>
         In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
