--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of leading Technology Products and their Content Strategy & Knowledge Management Programs. And lately, my work has revolved around more Technical Platforms <a style="font-style: italic;">(improving developer experiences, infrastructure & system capabilities)</a> and data platforms <a style="font-style: italic;">(data science & analytics)</a>.
+        My career so far has been a blend of managing end-to-end Technology Products and their Content Strategy & Knowledge Management Programs. And lately, my work has revolved around more Technical Platforms <a style="font-style: italic;">(improving developer experiences, infrastructure & system capabilities)</a> and data platforms <a style="font-style: italic;">(data science & analytics)</a>.
         Along the way, I’ve collaborated closely with various SMEs (from senior stakeholders to fellow PMs, platform/data engg. and customer success teams), and contributed directly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>.
         <br><br>
         In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
-        And with time, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
+        With time, I also developed a soft spot for Technical Storytelling. I regularly share my learnings and thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
         <br><br>
         MY PHILOSOPHY:
       </p>
