--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         Along the way, I’ve collaborated closely with various SMEs (from senior stakeholders to fellow PMs, platform/data engg. and customer success teams), and contributed directly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>.
         <br><br>
         In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
-        With time, I also developed a soft spot for Technical Storytelling. I regularly share (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) my experiences, learnings and thoughts on the Latest Technological Advancements through Blogs and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
+        With time, I also developed a soft spot for Technical Storytelling. I regularly share (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) my own learnings and thoughts on the Latest Tech Advancements through Blogs and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for dev onboarding or breaking down complex technical concepts in a way that lands)</a>. 
         <br><br>
         MY PHILOSOPHY:
       </p>
