--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </p>
 
       <h3 style="font-size: 19px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.4;">
-       Stay Curious, Build Smart, Communicate Well, and Make Technology Understandable for ALL!
+       Stay Curious, Build Smart, Communicate Well, and Make Tech Understandable for ALL!
       </h3>
       
        <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;"> 
